load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tony84727/diplomat
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "output.go",
        "synthesizer.go",
    ],
    importpath = "github.com/tony84727/diplomat",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/data:go_default_library",
        "//pkg/emit:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/selector:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["output_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
