[package]
name = "diplomat"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"]}
serde_yaml = "0.8.11"
serde_json = "1.0.48"
maplit = "1.0.2"
