load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tony84727/diplomat/cmd/diplomat",
    visibility = ["//visibility:private"],
    deps = ["//cmd/diplomat/cmd:go_default_library"],
)

go_binary(
    name = "diplomat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
