load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "factory.go",
        "registry.go",
    ],
    importpath = "github.com/tony84727/diplomat/pkg/prepros",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/data:go_default_library",
        "//pkg/prepros/internal:go_default_library",
        "//pkg/prepros/types:go_default_library",
    ],
)
