load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config_navigator.go",
        "configuration_updater.go",
        "field_searcher.go",
        "project.go",
    ],
    importpath = "github.com/tony84727/diplomat/cmd/diplomat/internal",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/data:go_default_library",
        "//pkg/parser/yaml:go_default_library",
        "//pkg/reflecthelper:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_navigator_test.go",
        "configuration_updater_test.go",
        "field_searcher_test.go",
    ],
    data = ["//testdata"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/data:go_default_library",
        "//pkg/parser/yaml:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
