load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "factory_wrapper.go",
        "interface.go",
    ],
    importpath = "github.com/tony84727/diplomat/pkg/emit/types",
    visibility = ["//visibility:public"],
    deps = ["//pkg/data:go_default_library"],
)
