load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["preprocessor.go"],
    importpath = "github.com/tony84727/diplomat/pkg/prepros/chinese",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/data:go_default_library",
        "//pkg/prepros:go_default_library",
        "//pkg/prepros/types:go_default_library",
        "@com_github_siongui_gojianfan//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["preprocessor_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/data:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
